--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -42,27 +41,20 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/websockets": "^9.1.6",
-    "@prisma/client": "^4.4.0",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/gitlab": "^9.4.2",
-    "bull": "^4.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "crypto": "^1.0.1",
     "husky": "^8.0.1",
     "install": "^0.13.0",
     "lint-staged": "^13.0.3",
-    "prisma": "^4.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "winston": "^3.8.2"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/bull": "^3.15.9",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^5.0.0",
@@ -104,7 +96,6 @@
       "!<rootDir>/infra/exception-filter/**",
       "!<rootDir>/infra/pipes/**",
       "!<rootDir>/infra/shutdown/**",
-      "!<rootDir>/infra/db/models/**",
       "!<rootDir>/**/index.ts"
     ],
     "coverageDirectory": "../coverage",
