--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.1.6",
     "@nestjs/websockets": "^9.1.6",
+    "cache-manager": "4.0.0",
+    "cache-manager-redis-store": "2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "crypto": "^1.0.1",
-    "husky": "^8.0.1",
     "install": "^0.13.0",
+    "ioredis": "^5.2.4",
     "lint-staged": "^13.0.3",
+    "node-cache-manager": "^1.2.0",
+    "redis": "4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -55,6 +59,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^5.0.0",
@@ -66,7 +71,6 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.0",
     "jest": "28.1.3",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
