refactor: refact socket and cache

--- a/env.example
+++ b/env.example
@@ -1,6 +1,10 @@
 PORT=3000
 
 PORT=3000
+
 # REDIS
-REDIS_HOST = localhost
-REDIS_PORT = 6379 
+REDIS_USER=
+REDIS_PASSWORD=
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_HOST=rediss://${REDIS_USER}:${REDIS_PASSWORD}@${REDIS_HOST}:${REDIS_PORT}
