--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate": "yarn prisma migrate deploy",
-    "generate": "yarn prisma generate",
-    "prepare": "husky install"
+    "generate": "yarn prisma generate"
   },
   "lint-staged": {
     "src/**/*.ts": [
